# LiteLoaderQQNT-NoneBot

./: .editorconfig  .eslintrc.js  .eslintrc.json  .gitignore  .prettierrc.json  README.md  electron.vite.config.1727923265314.mjs  electron.vite.config.ts  manifest.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.web.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml
docs/: package-lock.json
docs/.config/: docs.yaml
docs/1.guide/: 1.index.md  2.installation.md  _dir.yml
docs/2.community/: 1.getting-help.md  2.contribution.md  _dir.yml
src/: global.d.ts  types.ts
src/lib/: fs.ts  index.ts  log.ts
src/lib/process/: impl.ts  index.ts  log.ts  process.ts  schemas.ts  utils.ts
src/main/: config.ts  handlers.ts  index.ts  on.ts  uv.ts
src/preload/: index.ts
src/renderer/: App.vue  index.html  index.ts  listener.ts
src/renderer/components/: LogView.vue  Mark.vue  PluginCard.vue  Toaster.vue
src/renderer/components/icons/: ChevronLeft.vue  CircleCheckFilled.vue  CircleXFilled.vue  Ellipsis.vue  GithubFilled.vue  index.ts
src/renderer/components/store/: Adapter.vue  Card.vue  Driver.vue  (+3 more)
src/renderer/lib/: utils.ts
src/renderer/router/: index.ts
src/renderer/views/: BotView.vue  SettingView.vue  StoreView.vue  view.html  welcome.html
src/template/: .env  .python-version  README.md  pyproject.toml
src/template/src/plugins/: echo.py
src/types/: adapter.ts  config.ts  driver.ts  plugin.ts
(+27 files in other folders)
